[package]
name = "bdk_tx"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk-tx"
documentation = "https://docs.rs/bdk_tx"
description = "Bitcoin transaction building library."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
miniscript = { version = "12.3.5", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
rand = { version = "0.8", optional = true }

[dependencies.bdk_coin_select]
version = "0.4.1"
default-features = false
git = "https://github.com/bitcoindevkit/coin-select"
rev = "89f55687059df15e3c0800ab5c0962bcb0c10e72"

[dev-dependencies]
anyhow = "1"
bdk_tx = { path = "." }
bitcoin = { version = "0.32.8", default-features = false, features = ["rand-std"] }
bdk_testenv = "0.13.0"
bdk_bitcoind_rpc = "0.22.0"
bdk_chain = { version = "0.23.2" }

[features]
default = ["std"]
std = ["miniscript/std", "rand/std", "bdk_coin_select/std"]

[[example]]
name = "synopsis"

[[example]]
name = "common"
crate-type = ["lib"]

[[example]]
name = "anti_fee_sniping"
