[package]
name = "bdk_tx"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk-tx"
documentation = "https://docs.rs/bdk_tx"
description = "Bitcoin transaction building library."
license = "MIT OR Apache-2.0"
readme = "README.md"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
miniscript = { version = "12.3.5", default-features = false }
# Temporary spike: pinned to temporary branch for ancestor-aware
# CPFP selection. Replace with a released bdk_coin_select version before merging.
bdk_coin_select = { git = "https://github.com/noahjoeris/coin-select", rev = "02aec86db8d2cdd16cb7a22b1354c0ba8442386a" }
rand_core = { version = "0.6.4", default-features = false }
rand = { version = "0.8", optional = true }

[dev-dependencies]
anyhow = "1"
bdk_tx = { path = "." }
bitcoin = { version = "0.32", default-features = false, features = ["rand-std"] }
bdk_testenv = "0.13.0"
bdk_bitcoind_rpc = "0.20.0"
bdk_chain = { version = "0.23.0" }

[features]
default = ["std"]
std = ["miniscript/std", "rand/std"]

[[example]]
name = "synopsis"

[[example]]
name = "common"
crate-type = ["lib"]

[[example]]
name = "anti_fee_sniping"

[[example]]
name = "cpfp"
